--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
   "version": "1.0.0",
   "description": "good",
   "main": "index.js",
+  "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "clarifai": "^2.9.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "knex": "^0.95.4",
+    "pg": "^8.6.0", 
+    "nodemon": "^2.0.7"
+  }
   "scripts": {
     "start": "node index.js",
     "start:dev": "nodemon index.js",
