--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "nodemon": "^2.0.7"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "start:dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
