--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "node": "^19.8.1",
     "clarifai": "^2.9.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
