--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "good",
   "main": "index.js",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "node": "^19.8.1",
+    "bcryptjs": "^2.4.3",
     "clarifai": "^2.9.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^7.1.0",
     "knex": "^0.95.4",
-    "pg": "^8.6.0", 
-    "nodemon": "^2.0.7"
+    "mongoose": "^7.1.0",
+    "node": "^19.8.1",
+    "nodemon": "^2.0.7",
+    "pg": "^8.6.0"
   },
   "scripts": {
     "start": "nodemon index.js",
